[package]
name = "blinky"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.1"
deku = "0.13.0"
hexlit = "0.5.3"
hidapi = { version = "1.4.1"}
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
