[package]
name = "blinky"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.4", features = ["derive"] }
color-eyre = "0.6.1"
deku = "0.16.0"
eyre = "0.6.8"
hexlit = "0.5.3"
hidapi = { version = "2.3.3" }
palette = { version = "0.7.2", features = ["named_from_str"] }
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
